migrate code completion to tcp based connection